--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "express": "^4.19.2",
     "formidable": "^3.5.1",
-    "react-autocomplete": "^1.8.1"
+    "react-autocomplete": "^1.8.1",
+    "react-modal": "^3.16.1"
   }
 }
