Adição do Twilio para enviar mensagem de confirmação para o whatsApp

--- a/BACKEND/config/config.env
+++ b/BACKEND/config/config.env
@@ -27,6 +27,5 @@ CLOUDINARY_API_KEY=755883697711961
 
 
 # Configurações do Twilio
-#TWILIO_ACCOUNT_SID=AC61727ff97307873203b99638f364fb4d
-#TWILIO_AUTH_TOKEN=b02f4f314917dfe31191d09f4836d76c
-#TWILIO_PHONE_NUMBER=whatsapp:+14155238886
+TWILIO_ACCOUNT_SID=AC61727ff97307873203b99638f364fb4d
+TWILIO_AUTH_TOKEN=c89fdea01e7c0ccd9b6377f6929427e0
