--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "cookie-parser": "^1.4.6",
     "date-fns": "^4.0.0-beta.1",
     "express": "^4.19.2",
     "formidable": "^3.5.1",
